--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <h1>This is a cartoon picture</h1>
     <a href ="https://chromewebstore.google.com/detail/ultimate-car-driving-game/aomkpefnllinimbhddlfhelelngakbbn?utm_source=ext_app_menu">
     <img src="/images/images.jpg"
+    alt="This is a beautiful picture"
     height ="250" width ="400">
     </a>
-    <h2>woof woof!</h2>
+    <h3>woof woof!</h3>
 
-    <h2>This is a Gif</h2>
-    <a href =""
+    <h1>puppyyyy</h1>
+    <img src ="/images/puppy.png"
+    alt="This is a cute puppy"
+    height="300" width="200">
     
     
 
